@@ -1,4 +1,6 @@
 0.07
+ - API change: 'data' parameter was changed to reference to array of
+   arguments for process().
  - Fix examples in doc.
 
 0.06 2022-07-24T22:23:31+02:00
